--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
                                         <p>Developed a custom phone case design platform using Next.js and TypeScript for the front end, with
                                             Prisma managing the database. Enabled users to upload images, preview, and customize phone cases, enhancing interactivity.</p>
                                         <div class="d-flex fs-2 gap-4">
-                                            <a class="text-gradient" href="https://github.com/divxyansh/YOLOv8-Object-Tracking"><i class="bi bi-paperclip"></i></a>
+                                            <a class="text-gradient" href="https://print-wala.vercel.app/"><i class="bi bi-browser-chrome"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -62,7 +62,7 @@
                 <div class="row gx-5 justify-content-center"></div>
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Project Card 2-->
-                        <h2 class="text-primary fw-bolder mb-0">printWala</h2>
+                        <h2 class="text-primary fw-bolder mb-0">Imaginify</h2>
                         <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                             <div class="card-body p-0">
                                 <div class="d-flex align-items-center">
@@ -71,25 +71,7 @@
                                         <p>Created a SaaS platform featuring AI-driven services using Next.js 14 for the front end, Cloudinary AI for
                                             image processing, Clerk for authentication.</p>
                                         <div class="d-flex fs-2 gap-4">
-                                            <a class="text-gradient" href="https://github.com/divxyansh/YOLOv8-Object-Tracking"><i class="bi bi-paperclip"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                    </div>
-                </div>
-                <div class="row gx-5 justify-content-center">
-                    <div class="col-lg-11 col-xl-9 col-xxl-8">
-                        <!-- Project Card 2-->
-                        <h2 class="text-primary fw-bolder mb-0">Neural Networks</h2>
-                        <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                            <div class="card-body p-0">
-                                <div class="d-flex align-items-center">
-                                    <div class="p-5">
-                                        <h2 class="fw-bolder">Adversarial Attacks On Neural Network</h2>
-                                        <p>DPublished a peer-reviewed paper titled "Adversarial Attacks on Neural Networks" in the Cyber Intelligence and Information Retrieval Conference (CIIR 2023), Lecture Notes in Networks and Systems series by Springer.</p>
-                                        <div class="d-flex fs-2 gap-4">
-                                            <a class="text-gradient" href="https://github.com/divxyansh/YOLOv8-Object-Tracking"><i class="bi bi-paperclip"></i></a>
+                                            <a class="text-gradient" href="https://ai-saas-platform-khaki.vercel.app/"><i class="bi bi-browser-chrome"></i></a>
                                         </div>
                                     </div>
                                 </div>
